test_suite5/DRACO/test_suite/draco-pinpoint/passing/pass_procedure_call_one_arg.draco
proc main() void : func(1); corp;

