test_suite5/DRACO/test_suite/draco-pinpoint/failing/fail_new_expr_as_stmt.draco
proc main() void : new(a+1); corp;

